[package]
name = "delegation-feed"
version = "0.1.0"
edition = "2021"

[features]
test-real-internet = []

[dependencies]
bytes = "1"
enum-primitive-derive = "0.3"
lazy_static = "1"
log = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
thiserror = "1"
tokio = { version = "^1, >=1.23.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
ureq = "2"
