[package]
name = "delegation-feed"
version = "0.1.0"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2021"
description = "Fetch and parse RIR delegation files and feed the data through BGP"
readme = "README.md"
repository = "https://github.com/myzhang1029/delegation-feed"
license = "AGPL-3.0-or-later"
keywords = ["bgp", "networking", "routing"]
categories = ["network-programming"]

[[bin]]
name = "delegation-feed"
path = "src/main.rs"
required-features = ["binary"]

[lib]
name = "pabgp"
path = "src/bgp/lib.rs"

[features]
default = ["binary", "impl-serde", "test-real-internet", "tokio-endec",]
# Derive serde::{Serialize, Deserialize} on lib types
impl-serde = ["serde"]
# BGP Codec for use with tokio-util
tokio-endec = ["tokio-util"]
binary = ["tokio-endec", "clap", "impl-serde", "serde", "simplelog", "tokio", "tokio-endec", "ureq"]
test-real-internet = []

[dependencies]
bytes = "1"
clap = { version = "4.5.17", features = ["derive"], optional = true }
enum-primitive-derive = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
lazy_static = "1"
log = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
simplelog = { version = "0.12", optional = true }
thiserror = "1"
tokio = { version = "^1, >=1.23.1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
ureq = { version = "2", optional = true }
